tried fix for overflow

--- a/js/slick/slick.css
+++ b/js/slick/slick.css
@@ -23,7 +23,7 @@
     position: relative;
 
     display: block;
-    overflow: hidden;
+    overflow: visible;
 
     margin: 0;
     padding: 0;
